--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -13,10 +13,10 @@ name: "CodeQL"
 
 on:
   push:
-    branches: [ main ]
+    branches: [ '22-2-13', '22-2-14', '22-2-15', '22-2-17','22-3-21', '22-3-24', '22-3-28', '22-4-7' ]
   pull_request:
     # The branches below must be a subset of the branches above
-    branches: [ main ]
+    branches: [ '22-2-13', '22-2-14', '22-2-15', '22-2-17','22-3-21', '22-3-24', '22-3-28', '22-4-7' ]
   schedule:
     - cron: '30 11 * * 1'
 
